--- a/index.html
+++ b/index.html
@@ -1,72 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Annuska Zolyomi IDEA LAB</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Omar's World</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <script defer src="js/script.js"></script>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research</a></li>
-            <li><a href="teaching.html">Teaching</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="cv.html">CV</a></li>
-        </ul>
-    </nav>
+  <nav>
+    <h1>Omar's World 🌍</h1>
+  </nav>
 
-    <div class="content">
-        <!-- Home Page Content -->
-        <div id="home">
-            <div class="home-content">
-                <div class="image">
-                    <img src="images/AnnuskaZolyomi line drawing.png" alt="Line drawing of smiling woman">
-                </div>
-                <div class="info">
-                    <h1>Annuska Zolyomi</h1>
-                    <p>Assistant Professor at UW Bothell in the <a href="https://www.uwb.edu/stem/about/divisions/css">Division of Computing & Software Systems</a></p>
-                </div>
-            </div>
-        </div>
+  <section class="intro">
+    <div class="bio">
+      <h2>Hey, I’m Omar 👋</h2>
+      <p>I’m a CSSE student at UW Bothell. I like coding, the gym and figuring out how tech can change the world.</p>
     </div>
-    
-    <!-- Placeholder Content for Other Pages -->
-    <div id="research" class="content">
-        <h1>Research</h1>
-        <p>Research content goes here.</p>
-    </div>
+  </section>
 
-    <div id="teaching" class="content">
-        <h1>Teaching</h1>
-        <p>I teach the following classes.</p>
-        <ul id="pastCourses">
-            <li>CSS 350 Management Principles for Computing Professionals</li>
-            <li>CSS 360 Software Engineering</li>
-            <li>CSS 370 Analysis and Design</li>
-            <li>CSS 478 Usability and User Centered Design</li>
-            <li>CSS 480 Principles of Human Computer Interaction</li>
-        </ul>
+  <section class="interests">
+    <h2>Things I am Into</h2>
+    <ul id="interest-list">
+      <li>Gaming</li>
+      <li>Fitness</li>
+      <li>Coding</li>
+      <li>Web Development</li>
+    </ul>
+    <button onclick="sortList()">Reorder the List 🔁</button>
+  </section>
 
-        <button onclick="sortList()">Sort List</button>
-
-
-
-    </div>
-
-    
-    <div id="projects" class="content">
-        <h1>Projects</h1>
-        <p>Projects content goes here.</p>
-    </div>
-
-    <div id="cv" class="content">
-        <h1>CV</h1>
-        <p>CV content goes here.</p>
-    </div>
-
-
+  <footer>
+    <p>Made with 💻 by Omar</p>
+  </footer>
 </body>
 </html>
