--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Omar's World</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/styles.css" />
   <script defer src="js/script.js"></script>
 </head>
 <body>
@@ -38,7 +38,14 @@
   <section class="keyboard-instructions">
     <h2>Keyboard Access Instructions</h2>
     <p>Use <strong>Tab</strong> to move between links and buttons. Press <strong>Enter</strong> to activate them.</p>
-    <p>This site focuses on making the navigation bar, list button, and external reading links fully accessible by keyboard.</p>
+    <p>This site focuses on making the navigation bar, list button, and reading links keyboard accessible with visible focus outlines.</p>
+  </section>
+
+  <section class="contrast-info">
+    <h2>Color Contrast & Accessibility</h2>
+    <p>I used navy blue (#003366) on white for navigation and green (#00796B) for buttons to ensure high contrast.</p>
+    <p>All combinations tested with the <a href="https://webaim.org/resources/contrastchecker/" target="_blank">WebAIM Contrast Checker</a> passed WCAG AA and AAA guidelines.</p>
+    <p>I used <a href="https://www.color-blindness.com/coblis-color-blindness-simulator/" target="_blank">Coblis</a> to simulate color blindness and confirmed the site remains usable for Deuteranopia and Protanopia.</p>
   </section>
 </body>
 </html>
