--- a/read.html
+++ b/read.html
@@ -25,13 +25,20 @@
       <li><a href="https://vercel.com/blog" target="_blank" tabindex="9">Vercel Blog</a></li>
       <li><a href="https://uxdesign.cc" target="_blank" tabindex="10">UX Collective</a></li>
       <li><a href="https://stackoverflow.com" target="_blank" tabindex="11">Stack Overflow</a></li>
+      <li><a href="https://accessibility.digital.gov" target="_blank" tabindex="12">Accessibility Guidelines</a></li>
     </ul>
   </main>
 
   <section class="keyboard-instructions">
     <h2>Keyboard Access Instructions</h2>
     <p>Use <strong>Tab</strong> to move between links and buttons. Press <strong>Enter</strong> to activate them.</p>
-    <p>We're making sure links are clearly highlighted and accessible for non-mouse users.</p>
+    <p>This page was designed to make reading links easy to reach with a keyboard and clearly show focus highlights.</p>
+  </section>
+
+  <section class="contrast-info">
+    <h2>Color Contrast & Accessibility</h2>
+    <p>Green buttons and blue nav bars were chosen for visibility and clarity. I tested the colors against WebAIM standards.</p>
+    <p>Color simulations confirmed the UI works for users with red/green and blue/yellow color blindness.</p>
   </section>
 </body>
 </html>
