--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <nav>
-    <a href="index.html" tabindex="1">Home</a>
-    <a href="read.html" tabindex="2">Things to Read</a>
+    <a href="index.html">Home</a>
+    <a href="read.html">Things to Read</a>
+    <a href="focus.html">Focus Page</a>
   </nav>
-
   <section class="intro">
     <div class="bio">
       <h2>Hey, I’m Omar 👋</h2>
