--- a/read.html
+++ b/read.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <nav>
-    <a href="index.html" tabindex="1">Home</a>
-    <a href="read.html" tabindex="2">Things to Read</a>
+    <a href="index.html">Home</a>
+    <a href="read.html">Things to Read</a>
+    <a href="focus.html">Focus Page</a>
   </nav>
-
   <main>
     <h1>Things to Read 📚</h1>
     <p>Use Tab and Enter to navigate and open links. All links are keyboard accessible.</p>
